--- a/style.scss
+++ b/style.scss
@@ -475,7 +475,7 @@ a{
           justify-content: center;
           height: 40px;
           width: 40px;
-          z-index: 1000;
+          z-index: 199;
           &Bar{
             background: $main;
             display: block;
@@ -517,21 +517,21 @@ a{
   position: absolute;
   top: 0;
   left: 0;
-  z-index: 1001;
+  z-index: 200;
   min-height: 100vh;
   width: 100vw;
+  
   @include media(lt) {
-    display: none;
+    opacity: 0;
+    visibility: hidden;
     &.is-open{
       animation: hamburger-open .5s ease;
-      display: block;
       opacity: 1;
       visibility: visible;
 
     }
     &.is-close{
-      animation: hamburger-open .5s ease;
-      display: block;
+      animation: hamburger-close .5s ease;
       opacity: 0;
       visibility: hidden;
 
@@ -674,6 +674,11 @@ a{
       
     }
     &__list{
+      min-height: 100vh;
+      width: 100%;
+      position: absolute;
+      top: 0;
+      left: 0;
       &Item{
         overflow-x: hidden;
         min-height: 100vh;
@@ -681,14 +686,16 @@ a{
         position: absolute;
         top: 0;
         left: 0;
+        background: $mainback;
         &01{
-          z-index:2;
           .lp-mv__listItemHandcream{
+            z-index: 0;
+            opacity: 0;
+            transform: tramslateX(-10%);
             position: absolute;
             right: 20.4vw;
             height: ((760 / 1080) * 100vh);          
-            top: calc(50% + 60px);
-            transform: translate(50%, -50%);
+            bottom: 40px;
             @include media(lt){
               height: ((700 / 1080) * 100vh);
               transform: translate(50%, -50%);
@@ -708,8 +715,9 @@ a{
 
         }
         &02{
-          z-index:1;
           .lp-mv__listItemHand{
+            z-index: 0;
+            opacity: 0;
             position: absolute;
             right:calc((160 / 1920) * 100vw);
             bottom: 0;
@@ -736,12 +744,18 @@ a{
           }
         }
         &03{
+          z-index: 0;
+          opacity: 0;
           height: 100vh;
           background: url(img/mv03.jpg)  center / cover no-repeat;
           width: 100%; 
-          z-index:0;
+          .lp-mv__listItemSakura01,.lp-mv__listItemSakura02{
+            display: none;
+          }
         }
         .lp-mv__listItemSakura01{
+          z-index: 0;
+          opacity: 0;
           max-width:313px;
           width: ((313 / 1920) * 100vw);
           position: absolute;
@@ -752,6 +766,8 @@ a{
           }
         }
         .lp-mv__listItemSakura02{
+          z-index: 0;
+          opacity: 0;
           max-width:260px;
           width: ((260 / 1920) * 100vw);
           position: absolute;
@@ -769,7 +785,76 @@ a{
         }
 
       }
+      //transition用
+      &.lp-mv__list--01{
+        .lp-mv__listItem01{
+          .lp-mv__listItemHandcream{
+            animation: rightIn .6s ease-out 1.5s forwards
+          }
+          .lp-mv__listItemSakura01{
+            animation: leftIn .6s ease-out 1.5s forwards
+          }
+          .lp-mv__listItemSakura02{
+            animation: rightIn .6s ease-out 1.5s forwards
+          }
+        }
+
+        +.lp-mv__pagination{
+          .lp-mv__paginationBtn--01{
+            background: $mainh;
+          }
+        }
+      }
+      &.lp-mv__list--02{
+        .lp-mv__listItem02{
+        .lp-mv__listItemHand{
+          animation: fadeIn .6s ease 1.5s forwards
+        }
+        .lp-mv__listItemSakura01{
+          animation: leftIn .6s ease 1.5s forwards
+        }
+        .lp-mv__listItemSakura02{
+          animation: rightIn .6s ease 1.5s forwards
+        }
+      }
+        +.lp-mv__pagination{
+          .lp-mv__paginationBtn--02{
+            background: $mainh;
+          }
+        }
+      }
+      &.lp-mv__list--03{
+        .lp-mv__listItem03{
+          transition: opacity .5s;
+          animation: fadeIn .6s ease 1.5s forwards;
+        }
+        +.lp-mv__pagination{
+          .lp-mv__paginationBtn--03{
+            background: $mainh;
+          }
+        }
+
+      }
+      
     }
+    //スライドボタン
+    &__pagination{
+      position: absolute;
+      bottom: 20px;
+      left: 50%;
+      transform: translateX(-50%);
+      z-index: 10;
+      &Btn{
+        display: inline-block;
+        width: 12px;
+        height: 12px;
+        border: 1px solid #804d4d;
+        border-radius: 50%;
+        margin: 0 12px;
+        cursor: pointer;
+      }
+    }
+    
   }
   &-winter{
     min-height: 100vh;
@@ -1466,4 +1551,175 @@ a{
       }
     }
   }
+}
+
+//@keyframe
+/*ハンバーガー*/
+@keyframes hamburger-open {
+  0% {
+    visibility: hidden;
+    opacity: 0;
+  }
+  100% {
+    z-index: 200;
+    visibility: visible;
+    opacity: 1;
+  }
+}
+@keyframes hamburger-close {
+  0% {
+    z-index: 200;
+    visibility: visible;
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+    visibility: hidden;
+  }
+}
+/*Mvアニメーション*/
+/*右から左*/
+@keyframes rightIn{
+	0%{
+    opacity: 0;
+    z-index: 1;
+    transform: translateX(25%);
+	}
+  25%{
+		opacity: 0.25;
+	}
+  50%{
+		opacity: 0.5;
+	}
+	80%{
+		opacity: 0.8;
+	}
+	to{
+    opacity: 1;
+    z-index: 1;
+		transform: translateX(0);
+	}
+}
+@keyframes rightOut{
+	0%{
+    opacity: 1;
+    z-index: 1;
+    transform: translateX(0);
+	}
+  25%{
+    opacity: 0.8;
+	}
+  50%{
+		opacity: 0.5;
+	}
+	80%{
+
+    opacity: 0.25;
+	}
+	to{
+
+    opacity: 0;
+    z-index: 0;
+    transform: translateX(25%);
+	}
+}
+/*@keyframes rightInOut{
+	0%{
+    opacity: 0;
+    z-index: 1;
+    transform: translateX(25%);
+	}
+  25%{
+		opacity: 1;
+	}
+  50%{
+    opacity: 1;
+    z-index: 1;
+		transform: translateX(0);
+	}
+	75%{
+		opacity: 1;
+	}
+	to{
+    opacity: 0;
+    z-index: 1;
+    transform: translateX(25%);
+	}
+}
+*/
+@keyframes leftIn{
+	0%{
+    opacity: 0;
+    z-index: 1;
+    transform: translateX(-25%);
+  }
+  25%{
+		opacity: 0.25;
+	}
+  50%{
+		opacity: 0.5;
+	}
+	80%{
+		opacity: 0.8;
+	}
+	to{
+    opacity: 1;
+    z-index: 1;
+    transform: translateX(0);
+	}
+}
+/*@keyframes leftInOut{
+	0%{
+    opacity: 0;
+    z-index: 1;
+    transform: translateX(-25%);
+  }
+  10%{
+    opacity: 1;
+    transform: translateX(0);
+	}
+  50%{
+    opacity: 1;
+    z-index: 1;
+		transform: translateX(0);
+	}
+	90%{
+    opacity: 1;
+    transform: translateX(0);
+	}
+	to{
+    opacity: 0;
+    z-index: 0;
+    transform: translateX(-25%);
+	}
+}*/
+@keyframes fadeIn{
+	0%{
+    z-index: 1;
+    opacity: 0;
+	}
+  25%{
+		opacity: 0.25;
+	}
+  50%{
+		opacity: 0.5;
+	}
+	80%{
+		opacity: 0.8;
+	}
+	to{
+    z-index: 1;
+    opacity: 1;
+	}
+}
+@keyframes fadeOut{
+	0%{
+    z-index: 1;
+    opacity: 1;
+    visibility: hidden;
+	}
+	to{
+    z-index: 1;
+    opacity: 0;
+	}
 }
