--- a/style.css
+++ b/style.css
@@ -803,6 +803,7 @@ a:hover, a:focus {
   .lp-mv__listItem01 .lp-mv__listItemHandcream {
     height: 64.81481vh;
     transform: translate(50%, -50%);
+    right: 13.67188vw;
   }
 }
 
@@ -812,13 +813,14 @@ a:hover, a:focus {
     transform: translateY(0);
     bottom: 40px;
     height: 54.6875vh;
-    right: 5.33333vw;
+    right: 2.60756vw;
   }
 }
 
 @media screen and (max-width: 428px) {
   .lp-mv__listItem01 .lp-mv__listItemHandcream {
     height: 47.22639vh;
+    right: 5.33333vw;
     bottom: 20px;
   }
 }
@@ -828,7 +830,7 @@ a:hover, a:focus {
   opacity: 0;
   transition: opacity .5s;
   position: absolute;
-  right: calc((160 / 1920) * 100vw);
+  right: calc((140 / 1920) * 100vw);
   bottom: 0;
   max-height: 942px;
   height: calc(100vh - 200px);
@@ -836,14 +838,14 @@ a:hover, a:focus {
 
 @media (max-width: 1280px) {
   .lp-mv__listItem02 .lp-mv__listItemHand {
-    right: calc((140 / 1920) * 100vw);
+    right: calc((120 / 1920) * 100vw);
   }
 }
 
 @media screen and (max-width: 1024px) {
   .lp-mv__listItem02 .lp-mv__listItemHand {
     overflow: hidden;
-    right: calc((60 / 1024) * -100vw);
+    right: calc((20 / 1024) * -100vw);
     height: calc(100vh - 220px);
   }
 }
@@ -851,7 +853,7 @@ a:hover, a:focus {
 @media screen and (max-width: 768px) {
   .lp-mv__listItem02 .lp-mv__listItemHand {
     height: 62.5vh;
-    right: 5.33333vw;
+    right: -5.33333vw;
   }
 }
 
@@ -918,15 +920,21 @@ a:hover, a:focus {
 }
 
 .lp-mv__list.lp-mv__list--01 .lp-mv__listItem01 .lp-mv__listItemHandcream {
-  animation: rightInMv 2.7s cubic-bezier(0.2, 0.5, 0.7, 1) 1s forwards;
+  animation: rightInMv 2.5s cubic-bezier(0.2, 0.5, 0.7, 1) 1s forwards;
 }
 
 .lp-mv__list.lp-mv__list--01 .lp-mv__listItem01 .lp-mv__listItemSakura01 {
-  animation: leftInMv 3s cubic-bezier(0.3, 0.7, 0.89, 1) 1s forwards;
+  animation: leftInMv 2.7s cubic-bezier(0.3, 0.7, 0.89, 1) 1s forwards;
 }
 
 .lp-mv__list.lp-mv__list--01 .lp-mv__listItem01 .lp-mv__listItemSakura02 {
-  animation: rightInMv 3s cubic-bezier(0.3, 0.7, 0.89, 1) 1s forwards;
+  animation: rightInMv 2.7s cubic-bezier(0.3, 0.7, 0.89, 1) 1s forwards;
+}
+
+@media screen and (max-width: 768px) {
+  .lp-mv__list.lp-mv__list--01 .lp-mv__listItem01 .lp-mv__listItemSakura02 {
+    animation: leftInMv 2.7s cubic-bezier(0.3, 0.7, 0.89, 1) 1s forwards;
+  }
 }
 
 .lp-mv__list.lp-mv__list--01 + .lp-mv__pagination .lp-mv__paginationBtn--01 {
@@ -934,15 +942,21 @@ a:hover, a:focus {
 }
 
 .lp-mv__list.lp-mv__list--02 .lp-mv__listItem02 .lp-mv__listItemHand {
-  animation: fadeInMv 2.7s cubic-bezier(0.2, 0.5, 0.7, 1) 1s forwards;
+  animation: fadeInMv 2.5s cubic-bezier(0.2, 0.5, 0.7, 1) 1s forwards;
 }
 
 .lp-mv__list.lp-mv__list--02 .lp-mv__listItem02 .lp-mv__listItemSakura01 {
-  animation: leftInMv 3s cubic-bezier(0.3, 0.7, 0.89, 1) 1s forwards;
+  animation: leftInMv 2.7s cubic-bezier(0.3, 0.7, 0.89, 1) 1s forwards;
 }
 
 .lp-mv__list.lp-mv__list--02 .lp-mv__listItem02 .lp-mv__listItemSakura02 {
-  animation: rightInMv 3s cubic-bezier(0.3, 0.7, 0.89, 1) 1s forwards;
+  animation: rightInMv 2.7s cubic-bezier(0.3, 0.7, 0.89, 1) 1s forwards;
+}
+
+@media screen and (max-width: 768px) {
+  .lp-mv__list.lp-mv__list--02 .lp-mv__listItem02 .lp-mv__listItemSakura02 {
+    animation: leftInMv 2.7s cubic-bezier(0.3, 0.7, 0.89, 1) 1s forwards;
+  }
 }
 
 .lp-mv__list.lp-mv__list--02 + .lp-mv__pagination .lp-mv__paginationBtn--02 {
@@ -950,7 +964,7 @@ a:hover, a:focus {
 }
 
 .lp-mv__list.lp-mv__list--03 .lp-mv__listItem03 {
-  animation: fadeInMv 3s cubic-bezier(0.3, 0.7, 0.89, 1) 1s forwards;
+  animation: fadeInMv 3s cubic-bezier(0.7, 0.75, 0.75, 0.75) 1s forwards;
 }
 
 .lp-mv__list.lp-mv__list--03 + .lp-mv__pagination .lp-mv__paginationBtn--03 {
@@ -976,6 +990,7 @@ a:hover, a:focus {
 }
 
 .lp-winter {
+  opacity: 0;
   min-height: 100vh;
   background: url(img/winter.jpg) center/cover no-repeat;
   color: #fff;
@@ -985,6 +1000,10 @@ a:hover, a:focus {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+.lp-winter.is-animation {
+  animation: fadeIn 0.5s cubic-bezier(0.25, 0.5, 0.75, 1) 0.5s forwards;
 }
 
 @media screen and (max-width: 768px) {
@@ -1110,6 +1129,7 @@ a:hover, a:focus {
 }
 
 .lp-spring__innerHead {
+  opacity: 0;
   font-size: 40px;
   text-align: center;
   padding: 40px 50px;
@@ -1120,6 +1140,10 @@ a:hover, a:focus {
   z-index: 1;
   background: radial-gradient(#fff 66%, rgba(255, 255, 255, 0.5) 70%, rgba(255, 255, 255, 0) 76%);
   margin-bottom: 40px;
+}
+
+.lp-spring__innerHead.is-animation {
+  animation: fadeIn 0.5s cubic-bezier(0.25, 0.5, 0.75, 1) 0.5s forwards;
 }
 
 @media screen and (max-width: 768px) {
@@ -1140,18 +1164,30 @@ a:hover, a:focus {
 }
 
 .lp-spring__innerImg--hand {
+  opacity: 0;
   display: block;
   margin: 0 auto;
   max-width: 750px;
   width: 75vw;
 }
 
+.lp-spring__innerImg--hand.is-animation {
+  animation: bottomIn 0.5s cubic-bezier(0.25, 0.5, 0.75, 1) 0.5s forwards;
+  animation-delay: 1.0s;
+}
+
 .lp-spring__innerImg--sakura01 {
+  opacity: 0;
   max-width: 420px;
   width: calc((420 / 1920)* 100vw);
   position: absolute;
   left: 0;
   top: 300px;
+}
+
+.lp-spring__innerImg--sakura01.is-animation {
+  animation: leftIn 0.5s cubic-bezier(0.25, 0.5, 0.75, 1) 0.5s forwards;
+  animation-delay: 0.7s;
 }
 
 @media screen and (max-width: 1024px) {
@@ -1176,11 +1212,17 @@ a:hover, a:focus {
 }
 
 .lp-spring__innerImg--sakura02 {
+  opacity: 0;
   max-width: 400px;
   width: calc((400/ 1920)* 100vw);
   position: absolute;
   right: 0;
   top: 300px;
+}
+
+.lp-spring__innerImg--sakura02.is-animation {
+  animation: rightIn 0.5s cubic-bezier(0.25, 0.5, 0.75, 1) 0.5s forwards;
+  animation-delay: 0.7s;
 }
 
 @media screen and (max-width: 1024px) {
@@ -1248,6 +1290,11 @@ a:hover, a:focus {
 .lp-catch__innerTextBox {
   max-width: 560px;
   width: 62.5%;
+  opacity: 0;
+}
+
+.lp-catch__innerTextBox.is-animation {
+  animation: bottomIn 0.5s cubic-bezier(0.25, 0.5, 0.75, 1) 0.5s forwards;
 }
 
 @media screen and (max-width: 1024px) {
@@ -1303,6 +1350,11 @@ a:hover, a:focus {
 .lp-catch__innerImg {
   background: url(img/lp-catch__innerImg.jpg) no-repeat center/cover;
   width: 50%;
+  opacity: 0;
+}
+
+.lp-catch__innerImg.is-animation {
+  animation: fadeIn 0.5s cubic-bezier(0.25, 0.5, 0.75, 1) 0.5s forwards;
 }
 
 @media screen and (max-width: 1024px) {
@@ -1352,6 +1404,11 @@ a:hover, a:focus {
   align-items: center;
   width: 50%;
   min-height: 100vh;
+  opacity: 0;
+}
+
+.lp-sales__innerText.is-animation {
+  animation: bottomIn 0.5s cubic-bezier(0.25, 0.5, 0.75, 1) 0.5s forwards;
 }
 
 @media screen and (max-width: 1024px) {
@@ -1435,6 +1492,11 @@ a:hover, a:focus {
 .lp-sales__innerIboxImg {
   display: block;
   height: calc((780 / 1080) * 100vh);
+  opacity: 0;
+}
+
+.lp-sales__innerIboxImg.is-animation {
+  animation: bottomIn 0.5s cubic-bezier(0.25, 0.5, 0.75, 1) 0.5s forwards;
 }
 
 @media screen and (max-width: 1024px) {
@@ -1466,6 +1528,11 @@ a:hover, a:focus {
 .lp-features__innerHead {
   text-align: center;
   margin-bottom: 80px;
+  opacity: 0;
+}
+
+.lp-features__innerHead.is-animation {
+  animation: bottomIn 0.5s cubic-bezier(0.25, 0.5, 0.75, 1) 0.5s forwards;
 }
 
 @media screen and (max-width: 768px) {
@@ -1546,8 +1613,21 @@ a:hover, a:focus {
   margin-bottom: 20px;
 }
 
+.lp-features__innerFlexBox01 {
+  opacity: 0;
+}
+
+.lp-features__innerFlexBox01.is-animation {
+  animation: bottomIn 0.5s cubic-bezier(0.25, 0.5, 0.75, 1) 0.5s forwards;
+}
+
 .lp-features__innerFlexBox02 {
+  opacity: 0;
   margin-top: calc((460 / 1080)* 100vh);
+}
+
+.lp-features__innerFlexBox02.is-animation {
+  animation: bottomIn 0.5s cubic-bezier(0.25, 0.5, 0.75, 1) 0.5s forwards;
 }
 
 @media screen and (max-width: 768px) {
@@ -1563,7 +1643,12 @@ a:hover, a:focus {
 }
 
 .lp-features__innerFlexBox03 {
+  opacity: 0;
   margin-top: -200px;
+}
+
+.lp-features__innerFlexBox03.is-animation {
+  animation: bottomIn 0.5s cubic-bezier(0.25, 0.5, 0.75, 1) 0.5s forwards;
 }
 
 @media screen and (max-width: 768px) {
@@ -1593,6 +1678,12 @@ a:hover, a:focus {
   width: calc((472 / 1920) * 100vw);
   top: 150px;
   right: 0;
+  opacity: 0;
+}
+
+.lp-features__innerImgSakura01.is-animation {
+  animation: rightIn 0.5s cubic-bezier(0.25, 0.5, 0.75, 1) 0.5s forwards;
+  animation-delay: 0.7s;
 }
 
 @media screen and (max-width: 1024px) {
@@ -1607,6 +1698,12 @@ a:hover, a:focus {
   top: 53%;
   transform: translateY(-50%);
   left: 0;
+  opacity: 0;
+}
+
+.lp-features__innerImgSakura02.is-animation {
+  animation: leftIn 0.5s cubic-bezier(0.25, 0.5, 0.75, 1) 0.5s forwards;
+  animation-delay: 0.7s;
 }
 
 @media screen and (max-width: 1024px) {
@@ -1621,6 +1718,12 @@ a:hover, a:focus {
   width: calc((578 / 1920) * 100vw);
   bottom: 0;
   right: 0;
+  opacity: 0;
+}
+
+.lp-features__innerImgSakura03.is-animation {
+  animation: rightIn 0.5s cubic-bezier(0.25, 0.5, 0.75, 1) 0.5s forwards;
+  animation-delay: 0.7s;
 }
 
 @media screen and (max-width: 1024px) {
@@ -1661,6 +1764,11 @@ a:hover, a:focus {
 .lp-voice__innerHead {
   text-align: center;
   margin-bottom: 80px;
+  opacity: 0;
+}
+
+.lp-voice__innerHead.is-animation {
+  animation: bottomIn 0.5s cubic-bezier(0.25, 0.5, 0.75, 1) 0.5s forwards;
 }
 
 @media screen and (max-width: 768px) {
@@ -1699,6 +1807,11 @@ a:hover, a:focus {
 .lp-voice__innerFlexBox {
   max-width: 600px;
   width: calc((720 / 1920) * 100vw);
+  opacity: 0;
+}
+
+.lp-voice__innerFlexBox.is-animation {
+  animation: bottomIn 0.5s cubic-bezier(0.25, 0.5, 0.75, 1) 0.5s forwards;
 }
 
 @media screen and (max-width: 1024px) {
@@ -1801,6 +1914,14 @@ a:hover, a:focus {
   }
 }
 
+.lp-shop__innerHead {
+  opacity: 0;
+}
+
+.lp-shop__innerHead.is-animation {
+  animation: bottomIn 0.5s cubic-bezier(0.25, 0.5, 0.75, 1) 0.5s forwards;
+}
+
 .lp-shop__innerHeadImg {
   display: block;
   margin: 0 auto 80px;
@@ -1835,6 +1956,11 @@ a:hover, a:focus {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  opacity: 0;
+}
+
+.lp-shop__innerFlexStore.is-animation {
+  animation: bottomIn 0.5s cubic-bezier(0.25, 0.5, 0.75, 1) 0.5s forwards;
 }
 
 @media screen and (max-width: 768px) {
@@ -1896,6 +2022,11 @@ a:hover, a:focus {
   padding-left: 40px;
   padding-right: 40px;
   box-sizing: border-box;
+  opacity: 0;
+}
+
+.lp-shop__innerFlexOnline.is-animation {
+  animation: bottomIn 0.5s cubic-bezier(0.25, 0.5, 0.75, 1) 0.5s forwards;
 }
 
 @media screen and (max-width: 768px) {
@@ -2011,7 +2142,6 @@ a:hover, a:focus {
   }
   25% {
     opacity: 1;
-    z-index: 1;
     transform: translateX(0);
   }
   50% {
@@ -2045,7 +2175,6 @@ a:hover, a:focus {
   }
   25% {
     opacity: 1;
-    z-index: 1;
     transform: translateX(0);
   }
   50% {
@@ -2096,121 +2225,63 @@ a:hover, a:focus {
   }
 }
 
-@keyframes fadeOut {
+/*汎用*/
+@keyframes rightIn {
   0% {
-    z-index: 1;
+    opacity: 0;
+    transform: translateX(25%);
+  }
+  50% {
     opacity: 1;
-    visibility: hidden;
   }
   to {
-    z-index: 1;
-    opacity: 0;
+    opacity: 1;
+    transform: translateX(0);
   }
 }
 
-/*汎用*/
-/*@keyframes rightInOut{
-	0%{
-    opacity: 0;
-    z-index: 1;
-    transform: translateX(25%);
-	}
-  25%{
-		opacity: 1;
-	}
-  50%{
-    opacity: 1;
-    z-index: 1;
-		transform: translateX(0);
-	}
-	75%{
-		opacity: 1;
-	}
-	to{
-    opacity: 0;
-    z-index: 1;
-    transform: translateX(25%);
-	}
-}
-*/
-@keyframes leftInMv {
+@keyframes leftIn {
   0% {
     opacity: 0;
-    z-index: 1;
     transform: translateX(-25%);
   }
-  25% {
-    opacity: 1;
-    z-index: 1;
-    transform: translateX(0);
-  }
   50% {
     opacity: 1;
-    transform: translateX(0);
-  }
-  70% {
-    opacity: 1;
-    transform: translateX(0);
-  }
-  80% {
-    opacity: 1;
-    transform: translateX(0);
-  }
-  90% {
-    opacity: 0.5;
-    transform: translateX(-5%);
   }
   to {
-    opacity: 0;
-    z-index: 1;
-    transform: translateX(-10%);
+    opacity: 1;
+    transform: translateX(0);
   }
 }
 
-@keyframes rightOut {
+@keyframes bottomIn {
   0% {
-    opacity: 1;
-    z-index: 1;
-    transform: translateX(0);
-  }
-  25% {
-    opacity: 0.8;
+    opacity: 0;
+    transform: translateY(10%);
   }
   50% {
     opacity: 0.5;
   }
-  80% {
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  30% {
     opacity: 0.25;
   }
+  50% {
+    opacity: 0.5;
+  }
+  75% {
+    opacity: 0.75;
+  }
   to {
-    opacity: 0;
-    z-index: 0;
-    transform: translateX(25%);
+    opacity: 1;
   }
 }
-
-/*@keyframes leftInOut{
-	0%{
-    opacity: 0;
-    z-index: 1;
-    transform: translateX(-25%);
-  }
-  10%{
-    opacity: 1;
-    transform: translateX(0);
-	}
-  50%{
-    opacity: 1;
-    z-index: 1;
-		transform: translateX(0);
-	}
-	90%{
-    opacity: 1;
-    transform: translateX(0);
-	}
-	to{
-    opacity: 0;
-    z-index: 0;
-    transform: translateX(-25%);
-	}
-}*/
